; ModuleID = '/home/carl/AnghaBench/Atlas/lib/extr_sql-tokenizer-lua.c_proxy_tokenize.c'
source_filename = "/home/carl/AnghaBench/Atlas/lib/extr_sql-tokenizer-lua.c_proxy_tokenize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @proxy_tokenize(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  store i32* %0, i32** %2, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i8* @luaL_checklstring(i32* %7, i32 1, i64* %3)
  store i8* %8, i8** %4, align 8
  %9 = call i32* (...) @sql_tokens_new()
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = load i64, i64* %3, align 8
  %13 = call i32 @sql_tokenizer(i32* %10, i8* %11, i64 %12)
  %14 = load i32*, i32** %2, align 8
  %15 = call i32** @lua_newuserdata(i32* %14, i32 8)
  store i32** %15, i32*** %6, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = load i32**, i32*** %6, align 8
  store i32* %16, i32** %17, align 8
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @sql_tokenizer_lua_getmetatable(i32* %18)
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @lua_setmetatable(i32* %20, i32 -2)
  ret i32 1
}

declare dso_local i8* @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i32* @sql_tokens_new(...) #1

declare dso_local i32 @sql_tokenizer(i32*, i8*, i64) #1

declare dso_local i32** @lua_newuserdata(i32*, i32) #1

declare dso_local i32 @sql_tokenizer_lua_getmetatable(i32*) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
